[package]
name = "bevy-web3-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#web-sys = "0.3.58"
[dependencies]
async-channel = "1.6.1"
bevy = "0.7.0"
bevy_egui = "0.14.0"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.57", features = ["Window"]}
web3 = { version = "0.18.0", features = [
  "wasm",
  "eip-1193",
], default-features = false }
mbutils = { git = "https://github.com/stnbu/mbutil.git" }
